--- a/report/references.bib
+++ b/report/references.bib
@@ -48,3 +48,22 @@ series = {ICML '09}
   pages     = {1--9}
 }
 
+@inproceedings{potential-rl,
+author = {Ng, Andrew Y. and Harada, Daishi and Russell, Stuart J.},
+title = {Policy Invariance Under Reward Transformations: Theory and Application to Reward Shaping},
+year = {1999},
+isbn = {1558606122},
+publisher = {Morgan Kaufmann Publishers Inc.},
+address = {San Francisco, CA, USA},
+booktitle = {Proceedings of the Sixteenth International Conference on Machine Learning},
+pages = {278–287},
+numpages = {10},
+series = {ICML '99}
+}
+
+@article{ppo,
+  title   = {Proximal Policy Optimization Algorithms},
+  author  = {Schulman, John and Wolski, Filip and Dhariwal, Prafulla and Radford, Alec and Klimov, Oleg},
+  journal = {arXiv preprint arXiv:1707.06347},
+  year    = {2017}
+}
